--- a/profile.html
+++ b/profile.html
@@ -39,7 +39,7 @@
                 <div class = "row justify-content-md-center wow bounceIn animated" data-wow-duration = "1.2s" data-wow-delay = "1.5s">
                     <div class = "col-sm-6">
                         <img src = "media/test.png" width = 100%>
-                        [Current Status]
+                        [Current Status] I'm a college student!
                     </div>
                     <div class = "col-sm-6">
                         <img src = "media/test.png" width = 100%>
