--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     </div>
                     <div class = "col-sm-6">
                         <img src = "media/test.png" width = 100%>
-                        [Role I played in each]
+                        [Roles I played in each]
                     </div>
                 </div>
             </div>
