--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <source src = "media/test.mp4" type = "video/mp4">
             Your browser does not support the video tag.
         </video>
+        TEST
         <div class = "page slide-in">
 
             <!--<div class = "wow fadeInDown animated" data-wow-duration = "1.5s">
