--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
             </div>-->
 
             <div class = "container-fluid">
-                <h1>HOME HEADING</h1>
+                <h1>Jessica Wei</h1>
+                <h2>Game and Tool Developer</h2>
                 <div class = "row justify-content-md-center wow fadeInDown animated" data-wow-duration = "1.2s" data-wow-delay = "1.2s">
 
                     <div class = "col-sm-6">
