--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <!-- NAV -->
         <ul class = "nav" id = overlay>
             <li class = "nav-item">
-                <strong>Jessica Wei
+                <strong>Jessica Wei</strong>
                 <br>
-                Gameplay and Tool Developer</strong>
+                <strong>Gameplay and Tool Developer</strong>
             </li>
 
         </ul>
