+ All of the new stuff I've added and haven't pushed

--- a/index.html
+++ b/index.html
@@ -20,22 +20,30 @@
         </script>-->
 
         <!-- NAV -->
-        <ul class = "nav" id = overlay>
+        <!--<ul class = "nav" id = overlay>
             <li class = "nav-item">
                 <strong>Jessica Wei</strong>
                 <br>
                 <strong>Gameplay and Tool Developer</strong>
             </li>
 
-        </ul>
-        <ul class = "nav justify-content-end" id = "overlay">
-            <li class = "nav-item navlink">
-                <a class = "nav-link active" id = "home-tab" data-toggle = "tab" href="index.html" role="tab" aria-controls="home" aria-selected="true" style = "background:rgba(0,0,0,0.1); color: rgba(72, 75, 77)">Home</a>
+        </ul>-->
+        <ul class = "nav justify-content-end normnav">
+            <li class = "nav-item">
+                <a class = "nav-link" id = "home-tab" data-toggle = "tab" href="index.html" role="tab" aria-controls="home" aria-selected="false" style = "color: rgba(72, 75, 77)">Home</a>
             </li>
-            <li class = "nav-item navlink">
-                <a class="nav-link" id="profile-tab" data-toggle="tab" href="profile.html" role="tab" aria-controls="profile" aria-selected="false" style = "color:white; background:rgba(0,0,0,0.1)">Profile</a>
+            <li class = "nav-item">
+                <a class="nav-link active" id="about-tab" data-toggle="tab" href="about.html" role="tab" aria-controls="profile" aria-selected="true" style = "color:white">About</a>
             </li>
-
+            <li class = "nav-item">
+                <a class="nav-link active" id="work-tab" data-toggle="tab" href="work.html" role="tab" aria-controls="work" aria-selected="true" style = "color:white">Work</a>
+            </li>
+            <li class = "nav-item">
+                <a class="nav-link active" id="bonus-tab" data-toggle="tab" href="bonus.html" role="tab" aria-controls="bonus" aria-selected="true" style = "color:white">Bonus!</a>
+            </li>
+            <li class = "nav-item">
+                <a class="nav-link active" id="contact-tab" data-toggle="tab" href="contact.html" role="tab" aria-controls="contact" aria-selected="true" style = "color:white">Contact</a>
+            </li>
         </ul>
 
         <video loop autoplay muted class = "vidbg" poster = "">
@@ -44,21 +52,32 @@
         </video>
         <div class = "page slide-in">
             <!--<div class = "wow fadeInDown animated" data-wow-duration = "1.5s">
-                <div style = "text-align: center"><h1>HOME HEADING</h1></div>
+                <div style = "text-align: center"><h1>Jessica Wei</h1></div>
             </div>-->
 
             <div class = "container-fluid">
-                <h1>Jessica Wei</h1>
-                <h2>Gameplay and Tool Developer </h2>
+                <div style = "text-align: center"><h1><b>Jessica Wei</b></h1></div>
+                <div style = "text-align: center"><h3>Gameplay and Tool Developer </h3></div>
+                <br>
                 <div class = "row justify-content-md-center wow fadeInDown animated" data-wow-duration = "1.2s" data-wow-delay = "1.2s">
-
                     <div class = "col-sm-6">
-                        <img src = "media/test.png" width = 100%>
-                        [Noteable things I've worked on]
+                        <img src = "media/covers/fade-away-cover-sq-360-border.png" width = 100%>
+                        <div style = "text-align: center">Fade Away</div>
                     </div>
                     <div class = "col-sm-6">
-                        <img src = "media/test.png" width = 100%>
-                        [Roles I played in each]
+                        <img src = "media/covers/a-whisper-of-smoke-cover-sq-360-border.png" width = 100%>
+                        <div style = "text-align: center">A Whisper of Smoke</div>
+                    </div>
+                </div>
+                <br>
+                <div class = "row justify-content-md-center wow fadeInDown animated" data-wow-duration = "1.2s" data-wow-delay = "1.2s">
+                    <div class = "col-sm-6">
+                        <img src = "media/covers/the-traveling-botanist-cover-sq-360-border.png" width = 100%>
+                        <div style = "text-align: center">The Traveling Botanist</div>
+                    </div>
+                    <div class = "col-sm-6">
+                        <img src = "media/covers/my-last-braincell-cover-sq-360-border.png" width = 100%>
+                        <div style = "text-align: center">My Last Braincell</div>
                     </div>
                 </div>
             </div>
