pushing the bit of work on the weekend

--- a/index.html
+++ b/index.html
@@ -17,14 +17,17 @@
             <div class="card-home-content">
                 <h1 id="header-intro">Hello! I'm <span class ="font-italics">Jessica Wei</span>, a Software Engineer.</h1>
                 <br><br>
-                <h2><span class="font-thin">Games</span></h2>
-                <h2><span class="font-thin">Tools</span></h2>
-                <h2><span class="font-thin">Performance</span></h2>
+                <div class="card-home-text-group">
+                  <h2><span class="font-thin">Gameplay Engineering</span></h2>
+                  <h2><span class="font-thin">Games for Impact</span></h2>
+                  <h2><span class="font-thin">Tools Development</span></h2>
+                  <h2><span class="font-thin">Performance</span></h2>
+                </div>
                 <br><br>
                 <button class = "btn-scroll-down">Curious? Scroll on!</button>
             </div>
         </div>
-        
+
         <div class="card-home" id="home-samples">
             <div class="card-home-content">
                 <h2>My Work</h2>
@@ -38,14 +41,16 @@
                 <br><br><br><br>
                 <button class="btn-go-right">There's More! ></button>
             </div>
-            
+
         </div>
 
         <div class="card-home" id="home-contact">
             <div class="card-home-content">
                 <h2>Contact</h2>
                 <br><br>
-                <a href="https://www.linkedin.com/in/jessica-wei-947a5416b">LinkedIn</a>
+                <div class="card-home-text-group">
+                  <a href="https://www.linkedin.com/in/jessica-wei-947a5416b">LinkedIn</a>
+                </div>
             </div>
         </div>
         <!-- JS -->
