+ Added scrolling animations for long width ! Need to add a "min-height" requirement next for long width b/c scrolling animations disabled the vertical scroll

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset = "utf-8">
         <meta name = "viewport" content = "width = device-width, initial-scale = 1.0">
         <meta http-equiv = "X UA-Compatible" content = "ie=edge">
-        
+
         <!-- TAB NAME-->
         <title>Homepage | Jessica Wei</title>
 
@@ -14,7 +14,8 @@
         <link rel ="stylesheet" href = "css/style.css">
     </head>
     <body>
-        <div class="card-home" id="home-intro">
+      <!-- Home Intro Card -->
+        <div class="card-home home-card-show" id="home-intro">
             <div class="card-home-content" id="home-intro-content">
                 <div id="home-intro-content-left">
                     <h1 class="long-elements font-bold">👋 I'm <span class ="font-italics">Jessica Wei</span>.</h1>
@@ -43,10 +44,10 @@
                 <!--<button class = "btn-scroll-down">Curious? Scroll on!</button>-->
             </div>
         </div>
-
-        <div class="card-home" id="home-samples">
+        <!-- Home Work Samples Card -->
+        <div class="card-home home-card-hide" id="home-samples">
             <div class="card-home-content">
-                <h2 class="font-bold">My Work</h2>
+                <h2 class="font-bold">Featured Work</h2>
                 <br><br>
                 <div class="grid-home-showcase">
                     <img class="grid-home-showcase-cover" src="./media/covers/a-whisper-of-smoke-cover-sq-360.jpg" alt="Whisper of Smoke thumbnail: A winged bunny carrying a scrapbook of memories.">
@@ -59,8 +60,8 @@
             </div>
 
         </div>
-
-        <div class="card-home" id="home-contact">
+        <!-- Home Contact Card -->
+        <div class="card-home home-card-hide" id="home-contact">
             <div class="card-home-content">
                 <h2 class="font-bold">Contact</h2>
                 <br><br>
