--- a/index.html
+++ b/index.html
@@ -35,10 +35,12 @@
                         <h3><span class="font-thin scale-font-size">Games for Impact</span></h3>
                         <h3><span class="font-thin scale-font-size">Tools Development</span></h3>
                         <h3><span class="font-thin scale-font-size">Performance</span></h3>
+                        <br>
+                        <img src="./media/sim_self_circle_500.png" alt="Jessica as a sim" width=400>
                     </div>
                 </div>
                 <div id="home-intro-content-right">
-                    <img class="long-elements" src="./media/PLACEHOLDER-GRAPHIC-1.png" alt="Picture of a laptop">
+                    <img class="long-elements" src="./media/sim_self_circle_500.png" alt="Jessica as a sim">
                 </div>
                 <br><br>
                 <!--<button class = "btn-scroll-down">Curious? Scroll on!</button>-->
@@ -51,9 +53,13 @@
                 <br><br>
                 <div class="grid-home-showcase">
                     <img class="grid-home-showcase-cover" src="./media/covers/a-whisper-of-smoke-cover-sq-360.jpg" alt="Whisper of Smoke thumbnail: A winged bunny carrying a scrapbook of memories.">
+
                     <img class="grid-home-showcase-cover" src="./media/covers/a-whisper-of-smoke-cover-sq-360.jpg" alt="Whisper of Smoke thumbnail: A winged bunny carrying a scrapbook of memories.">
+
                     <img class="grid-home-showcase-cover" src="./media/covers/a-whisper-of-smoke-cover-sq-360.jpg" alt="Whisper of Smoke thumbnail: A winged bunny carrying a scrapbook of memories.">
+
                     <img class="grid-home-showcase-cover" src="./media/covers/a-whisper-of-smoke-cover-sq-360.jpg" alt="Whisper of Smoke thumbnail: A winged bunny carrying a scrapbook of memories.">
+
                 </div>
                 <br><br><br><br>
                 <button class="btn-go-right">There's More! ></button>
