+ Updated scroll animations to go both ways

--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
 
                 </div>
                 <br><br><br><br>
-                <button class="btn-go-right">There's More! ></button>
+                <a href="https://jessuka.itch.io/">
+                    <button class="btn-go-right" href="">There's More! ></button>
+                </a>
             </div>
 
         </div>
