+ Added scroll gif; conditional appearance to come when I wake up tomorrow

--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
                     <br><br>
                     <div class="long-elements card-home-text-group">
                     <h3><span class="font-thin scale-font-size">&emsp;&emsp;&emsp;&ensp;Gameplay Engineering</span></h3>
-                    <h3><span class="font-thin scale-font-size">&emsp;&emsp;&emsp;&ensp;Games for Impact</span></h3>
                     <h3><span class="font-thin scale-font-size">&emsp;&emsp;&emsp;&ensp;Tools Development</span></h3>
+                    <h3><span class="font-thin scale-font-size">&emsp;&emsp;&emsp;&ensp;Games for Impact</span></h3>
                     <h3><span class="font-thin scale-font-size">&emsp;&emsp;&emsp;&ensp;Performance</span></h3>
                     </div>
                     <div class="short-elements card-home-text-group">
                         <h3><span class="font-thin scale-font-size">Gameplay Engineering</span></h3>
-                        <h3><span class="font-thin scale-font-size">Games for Impact</span></h3>
                         <h3><span class="font-thin scale-font-size">Tools Development</span></h3>
+                        <h3><span class="font-thin scale-font-size">Games for Impact</span></h3>
                         <h3><span class="font-thin scale-font-size">Performance</span></h3>
                         <br>
                         <img src="./media/sim_self_circle_500.png" alt="Jessica as a sim" width=400>
@@ -77,6 +77,10 @@
                   <a href="https://www.linkedin.com/in/jessica-wei-947a5416b">LinkedIn</a>
                 </div>
             </div>
+        </div>
+        <!-- Constant Footer elements -->
+        <div class="long-elements bottom-center">
+            <img src="media/scroll.gif" alt="Jessica as a sim" width = 100>
         </div>
         <!-- JS -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
