+ Added a timer (needs debugging) for the scroll down prompt + Added static page number (will add dynamic functionality)

--- a/index.html
+++ b/index.html
@@ -79,8 +79,11 @@
             </div>
         </div>
         <!-- Constant Footer elements -->
-        <div class="long-elements bottom-center">
-            <img src="media/scroll.gif" alt="Jessica as a sim" width = 100>
+        <div class="bottom-center">
+            <img id="scroll-tip" class="hide" src="media/scroll.gif" alt="Tip to scroll down">
+        </div>
+        <div class="long-elements bottom-right">
+            <div id="page-number">Page ?/?</div>
         </div>
         <!-- JS -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
