--- a/index.html
+++ b/index.html
@@ -52,14 +52,13 @@
                 <h2 class="font-bold">Featured Work</h2>
                 <br><br>
                 <div class="grid-home-showcase">
-                    <img class="grid-home-showcase-cover" src="./media/covers/a-whisper-of-smoke-cover-sq-360.jpg" alt="Whisper of Smoke thumbnail: A winged bunny carrying a scrapbook of memories.">
+                    <img class="grid-home-showcase-cover showcase-cover-1" src="./media/covers/the-sims-4-cover-sq-360.jpg" alt="The Sims 4 thumbnail: The player-indicating green plumbob.">
 
-                    <img class="grid-home-showcase-cover" src="./media/covers/a-whisper-of-smoke-cover-sq-360.jpg" alt="Whisper of Smoke thumbnail: A winged bunny carrying a scrapbook of memories.">
+                    <img class="grid-home-showcase-cover showcase-cover-2" src="./media/covers/a-whisper-of-smoke-cover-sq-360.jpg" alt="Whisper of Smoke thumbnail: A winged bunny carrying a scrapbook of memories.">
 
-                    <img class="grid-home-showcase-cover" src="./media/covers/a-whisper-of-smoke-cover-sq-360.jpg" alt="Whisper of Smoke thumbnail: A winged bunny carrying a scrapbook of memories.">
+                    <img class="grid-home-showcase-cover showcase-cover-3" src="./media/covers/fade-away-cover-sq-360.jpg" alt="Fade Away thumbnail: A headshot of the main protagonist, Parker.">
 
-                    <img class="grid-home-showcase-cover" src="./media/covers/a-whisper-of-smoke-cover-sq-360.jpg" alt="Whisper of Smoke thumbnail: A winged bunny carrying a scrapbook of memories.">
-
+                    <img class="grid-home-showcase-cover showcase-cover-4" src="./media/covers/my-last-braincell-cover-sq-360.jpg" alt="My Last Braincell thumbnail: A braincell wearing a grdauation cap.">
                 </div>
                 <br><br><br><br>
                 <a href="https://jessuka.itch.io/">
