+ Added a WIP page + Added links to the featured works (grid still WIP) + Modified most links to open in a new tab

--- a/index.html
+++ b/index.html
@@ -52,17 +52,22 @@
                 <h2 class="font-bold">Featured Work</h2>
                 <br><br>
                 <div class="grid-home-showcase">
-                    <img class="grid-home-showcase-cover showcase-cover-1" src="./media/covers/the-sims-4-cover-sq-360.jpg" alt="The Sims 4 thumbnail: The player-indicating green plumbob.">
-
-                    <img class="grid-home-showcase-cover showcase-cover-2" src="./media/covers/a-whisper-of-smoke-cover-sq-360.jpg" alt="Whisper of Smoke thumbnail: A winged bunny carrying a scrapbook of memories.">
-
-                    <img class="grid-home-showcase-cover showcase-cover-3" src="./media/covers/fade-away-cover-sq-360.jpg" alt="Fade Away thumbnail: A headshot of the main protagonist, Parker.">
-
-                    <img class="grid-home-showcase-cover showcase-cover-4" src="./media/covers/my-last-braincell-cover-sq-360.jpg" alt="My Last Braincell thumbnail: A braincell wearing a grdauation cap.">
+                    <a href="wip.html">
+                        <img class="grid-home-showcase-cover" src="./media/covers/the-sims-4-cover-sq-360.jpg" alt="The Sims 4 thumbnail: The player-indicating green plumbob.">
+                    </a>
+                    <a href="https://zooployees.itch.io/zoopany" target="_blank">
+                        <img class="grid-home-showcase-cover" src="./media/covers/zoopany-cover-sq-360.png" alt="Zoopany thumbnail: A pair of tiger paws typing on a computer that shows the Zoopany logo.">
+                    </a>
+                    <a href="https://jessuka.itch.io/a-whisper-of-smoke" target="_blank">
+                        <img class="grid-home-showcase-cover" src="./media/covers/a-whisper-of-smoke-cover-sq-360.jpg" alt="Whisper of Smoke thumbnail: A winged bunny carrying a scrapbook of memories.">
+                    </a>
+                    <a href="https://jade-studios.itch.io/fade-away" target="_blank">
+                        <img class="grid-home-showcase-cover" src="./media/covers/fade-away-cover-sq-360.jpg" alt="Fade Away thumbnail: A headshot of the main protagonist, Parker.">
+                    </a>
                 </div>
                 <br><br><br><br>
-                <a href="https://jessuka.itch.io/">
-                    <button class="btn-go-right" href="">There's More! ></button>
+                <a href="https://jessuka.itch.io/" target="_blank">
+                    <button class="btn-go-right">There's More! ></button>
                 </a>
             </div>
 
@@ -73,7 +78,7 @@
                 <h2 class="font-bold">Contact</h2>
                 <br><br>
                 <div class="card-home-text-group">
-                  <a href="https://www.linkedin.com/in/jessica-wei-947a5416b">LinkedIn</a>
+                  <a href="https://www.linkedin.com/in/jessica-wei-947a5416b" target="_blank">LinkedIn</a>
                 </div>
             </div>
         </div>
